fix z-index

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,6 +14,7 @@ div.header{
     margin: 0 auto;
     width: 100%;
     background-color:#7fd3cf;
+    z-index:10;
 }
 div.header>div.container{
     width: 60rem;
@@ -22,6 +23,7 @@ div.header>div.container{
     margin-right:auto;
 }
 div.header>div.container>div{
+    position:relative;
     font-size: 1rem ;
     display:inline-block;
     width: 8rem;
@@ -44,6 +46,8 @@ div.userinfo{
     width: 30rem;
     height: 18rem;
     border:1px dashed;
+    overflow: hidden;
+    z-index:2;
 }
 div.userinfo>img{
     border:1px dotted orangered;
@@ -56,14 +60,17 @@ div.userinfo>img:hover{
 }
 div.container>div>div{
     font-size: 0.8rem;
-    position:absolute;
+    position:relative;
     border:1px dashed;
     width: 8rem;
     display:none;
     overflow: hidden;
+    z-index:10;
 }
 div.container>div>div{
     display: none;
+    z-index:10;
+    overflow: hidden;
 }
 div.container>div>div>*{
     text-decoration: none;
@@ -71,10 +78,14 @@ div.container>div>div>*{
     border:1px solid #BBBBBB;
     padding:0.133rem;
     background-color: #e0c9fa;
+    overflow: hidden;
     z-index:10;
     display:block;
 }
 div.sweets{
     position: relative;
     top:4rem;
+    overflow: hidden;
+    width: 50rem;
+    z-index:1;
 }
